--- a/public/assets/scss/components/_misc.scss
+++ b/public/assets/scss/components/_misc.scss
@@ -299,7 +299,7 @@ select {
     border-radius: 8px;
     font-size: 16px;
     width: 100px;
-    margin-left: 15px;
+   /* margin-left: 15px; */
   }
 .select-box {
     display: flex;
